# vulkan-visualizer

./: .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md
.github/: WORKFLOWS_UPDATE.md
.github/workflows/: arch-linux-build.yml  docker-ghcr.yml  linux-build.yml  macos-build.yml  release.yml  windows-build.yml
app/: vk.app.cpp  vk.app.ixx
cmake/: VulkanVisualizerConfig.cmake.in  setup_imgui.cmake  setup_sdl3.cmake  setup_stb.cmake  setup_vkbootstrap.cmake  setup_vma.cmake
include/: vk_engine.h  vv_camera.h
module/: vk.camera.ixx  vk.context.ixx  vk.engine.ixx  vk.plugins.ixx
module/plugins/: vk.plugins.bitmap.ixx  vk.plugins.geometry.ixx  vk.plugins.screenshot.ixx  vk.plugins.transform.ixx  vk.plugins.viewport3d.ixx
module/toolkit/: vk.toolkit.camera.ixx  vk.toolkit.geometry.ixx  vk.toolkit.imgui.ixx  vk.toolkit.log.ixx  vk.toolkit.math.ixx  vk.toolkit.vulkan.ixx
modules/: vk.camera.ixx  vk.context.ixx  vk.frame.ixx  vk.geometry.ixx  vk.imgui.ixx  vk.math.ixx  vk.memory.ixx  vk.pipeline.ixx  vk.swapchain.ixx  vk.texture.ixx
shader/: bitfield.frag  bitfield.vert  bitfield_grid.frag  bitfield_grid.vert  geometry.frag  geometry.vert  test_camera_transform.vert  viewport.frag
src/: vk.camera.cpp  vk.context.cpp  vk.engine.cpp  vk.frame.cpp  vk.geometry.cpp  vk.imgui.cpp  vk.math.cpp  vk.memory.cpp  vk.pipeline.cpp  vk.plugins.cpp  vk.swapchain.cpp  vk.texture.cpp  vk_engine.cpp  vv_camera.cpp
src/plugins/: vk.plugins.bitmap.cpp  vk.plugins.geometry.cpp  vk.plugins.screenshot.cpp  vk.plugins.transform.cpp  vk.plugins.viewport3d.cpp
src/toolkit/: vk.toolkit.camera.cpp  vk.toolkit.geometry.cpp  vk.toolkit.imgui.cpp  vk.toolkit.log.cpp  vk.toolkit.math.cpp  vk.toolkit.vulkan.cpp
test/: test_camera_transform.cpp  test_geometry.cpp  test_raycast.cpp  test_screenshot.cpp  test_texture.cpp  test_viewport.cpp  test_vis_bitfield.cpp  test_vis_bitfield2.cpp  test_vis_transform.cpp  test_vk.cpp  test_workspace.cpp
test/shader/: viewport.vert  wireframe.frag  wireframe.vert
test/shaders/: cube.slang  cube_texture.slang  rect.slang  workspace_lines.slang
test/src/: vk.viewport.cpp  vk.viewport.ixx
